[package]
name = "lego_ble_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", default-features = false }
log = { version = "0.4" }
pretty_env_logger = { version = "0.4.0" }
btleplug = { version = "0.9.0", features = ["serde"] }
futures = "0.3.16"
tokio = { version = "1", features = ["full"] }
